# apple-silicon-accelerometer

./: .cspell.json  .gitignore  LICENSE  README.md  motion_live.py  pyproject.toml  spu_sensor.py  tilt_maze.py
